Fix tab content overflow in stacked mode

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -120,3 +120,4 @@ $width-sidenav: 37px;
 
 $height-toolbar: 41px;
 $min-height-items-pane: 150px;
+$min-height-tab-context: 300px;
